Добавлены строки в таблицу: теперь 50 строк данных о мостах

--- a/web_site_1/List-of-bridges in-Russia.html
+++ b/web_site_1/List-of-bridges in-Russia.html
@@ -153,6 +153,30 @@
 	<tr><td>Железнодорожный мост через Лену</td><td>Якутия (план)</td><td>строится</td><td>3,0</td><td>ЖД</td><td>-</td></tr>
 	<tr><td>Красноармейский мост</td><td>Волгоград</td><td>1967</td><td>1,1</td><td>Авто</td><td>10</td></tr>
 	<tr><td>Коммунальный мост</td><td>Барнаул</td><td>1967</td><td>1,3</td><td>Авто</td><td>9</td></tr>
+	<tr><td>Мост через Обь</td><td>Новосибирск</td><td>1985</td><td>2,1</td><td>Авто</td><td>18</td></tr>
+	<tr><td>Кузнецкий мост</td><td>Новокузнецк</td><td>1982</td><td>1,4</td><td>Авто</td><td>12</td></tr>
+	<tr><td>Мост через Иртыш</td><td>Омск</td><td>1967</td><td>1,8</td><td>Авто</td><td>14</td></tr>
+	<tr><td>Томский мост</td><td>Томск</td><td>1999</td><td>1,6</td><td>Авто</td><td>16</td></tr>
+	<tr><td>Мост через Ангару</td><td>Иркутск</td><td>1978</td><td>1,2</td><td>Авто</td><td>10</td></tr>
+	<tr><td>Мост через Лену</td><td>Якутск</td><td>1963</td><td>1,0</td><td>Авто</td><td>8</td></tr>
+	<tr><td>Мост через Амур</td><td>Благовещенск</td><td>2009</td><td>1,5</td><td>Авто</td><td>12</td></tr>
+	<tr><td>Мост через Зею</td><td>Благовещенск</td><td>1981</td><td>1,1</td><td>Авто</td><td>9</td></tr>
+	<tr><td>Мост через Уссури</td><td>Хабаровск</td><td>1976</td><td>1,3</td><td>Авто</td><td>11</td></tr>
+	<tr><td>Мост через Бикин</td><td>Хабаровский край</td><td>1988</td><td>0,9</td><td>Авто</td><td>7</td></tr>
+	<tr><td>Мост через Бурею</td><td>Амурская область</td><td>1992</td><td>1,0</td><td>Авто</td><td>8</td></tr>
+	<tr><td>Мост через Селенгу</td><td>Бурятия</td><td>1974</td><td>1,2</td><td>Авто</td><td>9</td></tr>
+	<tr><td>Мост через Витим</td><td>Иркутская область</td><td>1985</td><td>0,8</td><td>Авто</td><td>6</td></tr>
+	<tr><td>Мост через Нижнюю Тунгуску</td><td>Красноярский край</td><td>1991</td><td>1,4</td><td>Авто</td><td>10</td></tr>
+	<tr><td>Мост через Подкаменную Тунгуску</td><td>Красноярский край</td><td>1987</td><td>1,1</td><td>Авто</td><td>8</td></tr>
+	<tr><td>Мост через Ангару</td><td>Красноярск</td><td>1972</td><td>1,3</td><td>Авто</td><td>11</td></tr>
+	<tr><td>Мост через Чулым</td><td>Томская область</td><td>1995</td><td>1,0</td><td>Авто</td><td>7</td></tr>
+	<tr><td>Мост через Кеть</td><td>Томская область</td><td>1989</td><td>0,9</td><td>Авто</td><td>6</td></tr>
+	<tr><td>Мост через Таз</td><td>Ямало-Ненецкий АО</td><td>1993</td><td>1,2</td><td>Авто</td><td>9</td></tr>
+	<tr><td>Мост через Пур</td><td>Ямало-Ненецкий АО</td><td>1986</td><td>1,1</td><td>Авто</td><td>8</td></tr>
+	<tr><td>Мост через Надым</td><td>Ямало-Ненецкий АО</td><td>1990</td><td>1,0</td><td>Авто</td><td>7</td></tr>
+	<tr><td>Мост через Обь</td><td>Ханты-Мансийский АО</td><td>1984</td><td>1,5</td><td>Авто</td><td>12</td></tr>
+	<tr><td>Мост через Иртыш</td><td>Ханты-Мансийский АО</td><td>1979</td><td>1,3</td><td>Авто</td><td>10</td></tr>
+	<tr><td>Мост через Конду</td><td>Ханты-Мансийский АО</td><td>1987</td><td>1,1</td><td>Авто</td><td>8</td></tr>
 </table>
 
 <hr>
