Исправил фильтры, и сделал папку с картинками

--- a/web_site_1/main.html
+++ b/web_site_1/main.html
@@ -11,6 +11,7 @@
     <br>
     <a href="List-of-bridges%20in-Russia.html">Список мостов России</a>
 		<hr>
-		<p><strong>Работу выполнил студент группы Б9123-09.03.04(3) Сяськин Никита</strong></p>
+		<p><strong>Работу выполнил студент группы 
+		Б9123-09.03.04(3) Сяськин Никита</strong></p>
 </body>
 </html>
