Исправил сайт 2лаб

--- a/web_site_1/The-longest-bridges-in-Russia.html
+++ b/web_site_1/The-longest-bridges-in-Russia.html
@@ -12,7 +12,7 @@
         <div class="header-container">
             <div class="logo">Мосты России</div>
             <nav class="menu">
-                <a href="The-longest-bridges-in-Russia.html" class="menu-item">Самые длинные</a>
+                <a href="The-longest-bridges-in-Russia.html" class="menu-item active">Самые длинные</a>
                 <a href="List-of-bridges in-Russia.html" class="menu-item">Список мостов</a>
                 <a href="Amur-Bridge.html" class="menu-item">Амурский мост</a>
             </nav>
@@ -21,22 +21,22 @@
 
     <!-- Image blocks section -->
     <div class="image-section">
-        <div class="large-block">
-            <img src="Images/Russki_Bridge.jpg" alt="Русский мост">
-        </div>
-        <div class="right-blocks">
-            <div class="small-block pink">
-                <img src="Images/Krim_Bridge.jpg" alt="Крымский мост">
+        <div class="image-top">
+            <div class="large-block">
+                <img src="Images/Russki_Bridge.jpg" alt="Русский мост">
             </div>
-            <div class="small-block blue">
-                <img src="Images/Big_Obuhovski_Bridge.jpg" alt="Большой Обуховский мост">
+            <div class="right-blocks">
+                <div class="small-block pink">
+                    <img src="Images/Krim_Bridge.jpg" alt="Крымский мост">
+                </div>
+                <div class="small-block blue">
+                    <img src="Images/Big_Obuhovski_Bridge.jpg" alt="Большой Обуховский мост">
+                </div>
             </div>
         </div>
-    </div>
-
-    <!-- Full width block -->
-    <div class="full-block">
-        <img src="Images/Amur_Bridge.jpg" alt="Амурский мост">
+        <div class="image-bottom">
+            <img src="Images/Amur_Bridge.jpg" alt="Амурский мост">
+        </div>
     </div>
 
     <!-- Circular elements section -->
@@ -81,7 +81,7 @@
             <div class="content-text">
                 <h3>Мостостроение в России</h3>
                 <p>Россия обладает богатой историей мостостроения. На территории страны построены уникальные мостовые сооружения, которые соединяют различные регионы и способствуют развитию транспортной инфраструктуры.</p>
-                <a href="List-of-bridges in-Russia.html" class="content-link">Подробнее</a>
+                <a href="List-of-bridges in-Russia.html" class="content-link align-right">Подробнее</a>
             </div>
         </div>
 
@@ -90,7 +90,7 @@
             <h3>История строительства</h3>
             <p>Мосты России строились на протяжении многих веков. Современные технологии позволяют создавать уникальные конструкции, способные выдерживать экстремальные нагрузки и погодные условия.</p>
             <p>Вантовые и висячие мосты стали символом технического прогресса страны.</p>
-            <a href="The-longest-bridges-in-Russia.html" class="content-link">Подробнее</a>
+            <a href="The-longest-bridges-in-Russia.html" class="content-link align-right">Подробнее</a>
         </div>
 
         <!-- Right content blocks -->
