--- a/web_site_1/1lab/The-longest-bridges-in-Russia.html
+++ b/web_site_1/1lab/The-longest-bridges-in-Russia.html
@@ -2,135 +2,120 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Мосты России</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Самые длинные мосты России</title>
 </head>
 <body>
-    <!-- Header with logo and menu -->
-    <header>
-        <div class="header-container">
-            <div class="logo">Мосты России</div>
-            <nav class="menu">
-                <a href="The-longest-bridges-in-Russia.html" class="menu-item active">Самые длинные</a>
-                <a href="List-of-bridges in-Russia.html" class="menu-item">Список мостов</a>
-                <a href="Amur-Bridge.html" class="menu-item">Амурский мост</a>
-            </nav>
-        </div>
-    </header>
+    <h1 align="center">Самые длинные мосты России</h1>
+    <a href="The-longest-bridges-in-Russia.html">Крупнейшие мосты России</a>
+    <br>
+    <a href="List-of-bridges%20in-Russia.html">Список самых длинных мостов</a>
+    <hr>
 
-    <!-- Image blocks section -->
-    <div class="image-section">
-        <div class="image-top">
-            <div class="large-block">
-                <img src="Images/Russki_Bridge.jpg" alt="Русский мост">
-            </div>
-            <div class="right-blocks">
-                <div class="small-block pink">
-                    <img src="Images/Krim_Bridge.jpg" alt="Крымский мост">
-                </div>
-                <div class="small-block blue">
-                    <img src="Images/Big_Obuhovski_Bridge.jpg" alt="Большой Обуховский мост">
-                </div>
-            </div>
-        </div>
-        <div class="image-bottom">
-            <img src="Images/Amur_Bridge.jpg" alt="Амурский мост">
+    <fieldset>
+        <a href="Amur-Bridge.html">
+        <img src="Images/Amur_Bridge.jpg"
+         width="260" height="180" alt="Амурский мост"></a>
+        <img src="Images/President_Bridge.jpg"
+         width="180" height="180" alt="Президентский мост через Волгу">
+        <img src="Images/Vladivostok_De_Frize_Bridge.JPG"
+         width="200" height="200" alt="Владивостокский мост на Де-Фриз">
+        <img src="Images/Toliatti_Bridge.jpg"
+         width="180" height="180" alt="Мост в Тольятти">
+        <img src="Images/563166.webp"
+         width="180" height="180" alt="Мост в России">
+        <img src="Images/1891666.jpg"
+         width="180" height="180" alt="Мост в России">
+        <img src="Images/50_big.jpg"
+         width="180" height="180" alt="Мост в России">
+    </fieldset>
+
+    <br>
+    <hr>
+
+    <div >
+        <img src="Images/Krim_Bridge.jpg"
+         width="400" height="250" alt="Крымский мост">
+        <div>
+            <h2>Крымский мост (Керченский транспортный переход)</h2>
+            <ol>
+                <li><strong>Построен:</strong> 2016–2019 годы, Керченский пролив (соединяет Тамань и Керчь).</li>
+                <li><strong>Тип:</strong> автодорожный и железнодорожный 
+                транспортный переход с арочными и пролётными секциями.</li>
+                <li><strong>Общая длина:</strong> около 19 км (в проектных границах).</li>
+            </ol>
+            <p>Основные сведения:</p>
+            <ol>
+                <li>Является самым длинным мостом на территории России 
+                по протяжённости транспортного перехода.</li>
+                <li>Через мост проходит автомобильная трасса и две 
+                железнодорожные колеи; есть подсветка арочных пролетов.</li>
+                <li>Строительство велось масштабно — задействованы тысячи 
+                строителей и сотни опорных свай.</li>
+            </ol>
+            <p>Особенности:</p>
+            <p>Мост стал важнейшим транспортным коридором, связывающим 
+            полуостров с материком; проект включает сложные инженерные 
+            решения для работы в море и сейсмической зоне.</p>
         </div>
     </div>
 
-    <!-- Circular elements section -->
-    <div class="circles-section">
-        <div class="circle-item">
-            <div class="circle">
-                <img src="Images/Russki_Bridge.jpg" alt="Русский мост">
-            </div>
-            <div class="circle-title">Русский мост</div>
-            <div class="circle-text">Вантовый мост во Владивостоке</div>
-        </div>
-        <div class="circle-item">
-            <div class="circle">
-                <img src="Images/Krim_Bridge.jpg" alt="Крымский мост">
-            </div>
-            <div class="circle-title">Крымский мост</div>
-            <div class="circle-text">Соединяет Крым с материковой Россией</div>
-        </div>
-        <div class="circle-item">
-            <div class="circle">
-                <img src="Images/President_Bridge.jpg" alt="Мост Президента">
-            </div>
-            <div class="circle-title">Мост Президента</div>
-            <div class="circle-text">Вантовый мост в Ульяновске</div>
-        </div>
-        <div class="circle-item">
-            <div class="circle">
-                <img src="Images/Big_Obuhovski_Bridge.jpg" alt="Большой Обуховский мост">
-            </div>
-            <div class="circle-title">Большой Обуховский</div>
-            <div class="circle-text">Вантовый мост в Санкт-Петербурге</div>
+    <div >
+        <img src="Images/Russki_Bridge.jpg"
+         width="350" height="250" 
+        alt="Русский мост">
+        <div>
+            <h2>Русский мост (Владивосток)</h2>
+            <ol>
+                <li><strong>Построен:</strong> открыт в 2012 году, между материком 
+                и островом Русский в бухте Золотой Рог.</li>
+                <li><strong>Тип:</strong> вантовый мост с высокими опорами 
+                (один из самых длинных вантовых мостов по длине пролётов в России).</li>
+                <li><strong>Общая длина:</strong> около 3,1 км (с учётом подходов).</li>
+            </ol>
+            <p>Основные сведения:</p>
+            <ol>
+                <li>Русский мост — важная магистральная связь для приморской 
+                столицы и университетского комплекса на острове Русский.</li>
+                <li>Запоминается своей стройной конфигурацией и высокой 
+                пилонной компоновкой, заметной издалека.</li>
+                <li>Проект требовал больших концентраций канатов и опор 
+                для обеспечения устойчивости пролётов над морской акваторией.</li>
+            </ol>
+            <p>Особенности:</p>
+            <p>Мост — один из символов Владивостока, имеет туристическую 
+            привлекательность и значимость для городской инфраструктуры.</p>
         </div>
     </div>
 
-    <!-- Content blocks section -->
-    <div class="content-blocks">
-        <!-- Left content block with image -->
-        <div class="content-left">
-            <div class="content-image">
-                <img src="Images/Toliatti_Bridge.jpg" alt="Мост в Тольятти">
-            </div>
-            <div class="content-text">
-                <h3>Мостостроение в России</h3>
-                <p>Россия обладает богатой историей мостостроения. На территории страны построены уникальные мостовые сооружения, которые соединяют различные регионы и способствуют развитию транспортной инфраструктуры.</p>
-                <a href="List-of-bridges in-Russia.html" class="content-link align-right">Подробнее</a>
-            </div>
-        </div>
-
-        <!-- Center content block -->
-        <div class="content-center">
-            <h3>История строительства</h3>
-            <p>Мосты России строились на протяжении многих веков. Современные технологии позволяют создавать уникальные конструкции, способные выдерживать экстремальные нагрузки и погодные условия.</p>
-            <p>Вантовые и висячие мосты стали символом технического прогресса страны.</p>
-            <a href="The-longest-bridges-in-Russia.html" class="content-link align-right">Подробнее</a>
-        </div>
-
-        <!-- Right content blocks -->
-        <div class="content-right">
-            <div class="right-item">
-                <div class="right-image">
-                    <img src="Images/Vladivostok_De_Frize_Bridge.JPG" alt="Золотой мост">
-                </div>
-                <div class="right-text">
-                    <h3>Золотой мост</h3>
-                    <p>Вантовый мост через бухту Золотой Рог во Владивостоке. Открыт в 2012 году к саммиту АТЭС.</p>
-                    <a href="#" class="content-link">Подробнее</a>
-                </div>
-            </div>
-            <div class="right-item">
-                <div class="right-image">
-                    <img src="Images/President_Bridge.jpg" alt="Мост Президента">
-                </div>
-                <div class="right-text">
-                    <h3>Мост Президента</h3>
-                    <p>Самый длинный мост в Ульяновске через реку Волга, построенный в 2009 году.</p>
-                    <a href="#" class="content-link">Подробнее</a>
-                </div>
-            </div>
-            <div class="right-item">
-                <div class="right-image">
-                    <img src="Images/Amur_Bridge.jpg" alt="Амурский мост">
-                </div>
-                <div class="right-text">
-                    <h3>Амурский мост</h3>
-                    <p>Железнодорожный мост через реку Амур, соединяющий берега у Хабаровска.</p>
-                    <a href="Amur-Bridge.html" class="content-link">Подробнее</a>
-                </div>
-            </div>
+    <div >
+        <img src="Images/Big_Obuhovski_Bridge.jpg" 
+        width="400" height="250" alt="Большой Обуховский мост">
+        <div>
+            <h2>Большой Обуховский мост (Санкт-Петербург)</h2>
+            <ol>
+                <li><strong>Построен:</strong> открыт в 2016 году, через Неву в Санкт-Петербурге.</li>
+                <li><strong>Тип:</strong> вантовый автомобильный мост 
+                (один из крупнейших в городе по длине и пропускной способности).</li>
+                <li><strong>Общая длина:</strong> несколько километров с подходами, 
+                значительная часть — длина пролётных и подходных конструкций.</li>
+            </ol>
+            <p>Основные сведения:</p>
+            <ol>
+                <li>Мост стал ключевой частью транспортного каркаса 
+                Санкт-Петербурга, разгружая центр и обеспечивая связь 
+                между южными районами.</li>
+                <li>Оснащён современными инженерными системами и рассчитан 
+                на интенсивное движение большегрузного транспорта.</li>
+                <li>Имеет характерную вантовую структуру и большие опорные пилоны.</li>
+            </ol>
+            <p>Особенности:</p>
+            <p>Проект ориентирован на высокую пропускную способность и 
+            надёжность в условиях северного климата.</p>
         </div>
     </div>
 
-    <!-- Footer -->
-    <footer>
-        <p>2025 год | Группа Б9123-09.03.04(3) | Сяськин Н.С.</p>
-    </footer>
+    <hr>
+    <p><strong>Выполнил студент группы 
+    Б9123-09.03.04(3) Сяськин Никита</strong></p>
 </body>
 </html>
